Spacing Corrections

--- a/less/index.less
+++ b/less/index.less
@@ -3,7 +3,7 @@
    v2.0 | 20110126
    License: none (public domain)
 */
-@import url('https://fonts.googleapis.com/css?family=Alata|Montserrat&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Alata|Montserrat:400,500,700&display=swap');
 
 //Variables
 @hover-color: crimson;
@@ -113,11 +113,15 @@ header{
 		a{
 			margin: 2% 0% 2% 5%;
 			text-decoration: none;
-			font-weight: bold;
+			font-weight: medium;
 
 			&:hover{
 				color: @hover-color;
 			}//this closes hover a
+
+			@media(max-width:@mobile){
+				margin: 2% 0;
+			}
 
 		}//this closes a
 
@@ -254,6 +258,7 @@ header{
 			width: 100%;
 			th{
 				text-align: left;
+				font-weight: bold;
 			}//this closes table header
 
 			td, th{
